Added button for exporting visuals

--- a/src/Clients/PowerBIVisualsPlayground/index.html
+++ b/src/Clients/PowerBIVisualsPlayground/index.html
@@ -55,6 +55,7 @@
                     <span class="subtitle">DataView:</span>
                     <select id="dataViewsSelect"></select>
                     <button id="randomize">Randomize</button>
+                    <button id="randomize">Export Visual</button>
                 </div>
                 <div id="capabilities">
                     <span class="subtitle">Show:</span>
